--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </style>
 </head>
 <body>
-    <h1>Stable Diffusion Image Generator</h1>
+    <h1>MohammadBanis AI Image Generator</h1>
     <input type="text" id="prompt" placeholder="Enter your prompt here...">
     <button onclick="generateImage()">Generate Image</button>
     <div id="output">
